le site de djago

--- a/Nos_Service.html
+++ b/Nos_Service.html
@@ -19,48 +19,73 @@
                     </div>
                 <div class="container-fluid">
                 <nav>
-                    <ul id="A3" class="container-fluid">
-                        <li class="A4 container-fluid"><a href="Acueil.html">Accueil</a></li>
-                        <li class="A4 container-fluid">A propos</li>
+                    <ul id="A3">
+                        <li class="A4 container-fluid"><a href="index.html">Accueil</a></li>
+                        <li class="A4 container-fluid"><a href="a_propos.html"> A propos</a></li>
                         <li class="A4 container-fluid"><a href="Nos_Service.html">Nos services</a></li>
-                        <li class="A4 container-fluid">Portfolio</li>
+                        <li class="A4 container-fluid"><a href="portfolio.html">Portfolio</li></a>
                         <li class="A4 container-fluid"><a href="#pied">Contact</a></li>
                     </ul>
                 </nav></div>
             </section>
         </header>
-        <section>
-            <img src="Images/marketing.jpg" alt="image" width="1330" height="500">
+        <div class="container">
+            <h1 class="centre">Nous intervenons dans plusieurs domaines...</h1>
+        </div>
+        <section class="container-fluid">
+            <img src="Images/marketing.jpg" alt="image" class="img-fluid">
         </section>
-        <section class="B1">
-            <div class="B2">
-                <img class="bruno" src="Images/clonage.jpg" alt="image" width="150" height="150">
-                <p>Clonage d'équipe</p>
+        <div id="back">
+        <div class="container-fluid">
+            <h1 class="container-fluid centre">Nos Services</h1>
+        <section class="B1 container-fluid">
+            <div class="B2 container-fluid">
+                <img class="bruno img-thumbnail" src="Images/clonage.jpg" alt="image">
+                <p class="yao">Clonage d'équipe</p>
             </div>
-            <div class="B3">
-                <img class="bruno" src="Images/duo.jpg" alt="image" width="150" height="150">
-                <p>Assistance</p>
+            <div class="B3 container-fluid">
+                <img class="bruno img-thumbnail" src="Images/duo.jpg" alt="image">
+                <p class="yao">Assistance</p>
             </div>
-            <div class="B4">
-                <img class="bruno" src="Images/equipe.png" alt="image" width="150" height="150">
-                <p>Construction d'équipe</p>
-            </div>
-        </section>
-        <section class="B1">
-            <div class="B2">
-                <img class="bruno" src="Images/tth.jpg" alt="image" width="150" height="150">
-                <p>NTS-Solution</p>
-            </div>
-            <div class="B3">
-                <img class="bruno" src="Images/ttth.jpg" alt="image" width="150" height="150">
-                <p>Informatique Papuss</p>
-            </div>
-            <div class="B4">
-                <img class="bruno" src="Images/img.jpg" alt="image" width="150" height="150">
-                <p>Piinga SARL</p>
+            <div class="B4 container-fluid">
+                <img class="bruno img-thumbnail" src="Images/equipe.png" alt="image">
+                <p class="yao">Construction d'équipe</p>
             </div>
         </section>
-        <footer>
+        <section class="B1 container-fluid">
+            <div class="B2 container-fluid">
+                <img class="bruno img-thumbnail" src="Images/tth.jpg" alt="image">
+                <p class="yao">NTS-Solution</p>
+            </div>
+            <div class="B3 container">
+                <img class="bruno img-thumbnail" src="Images/ttth.jpg" alt="image">
+                <p class="yao">Informatique Papuss</p>
+            </div>
+            <div class="B4 container-fluid">
+                <img class="bruno img-thumbnail" src="Images/img.jpg" alt="image">
+                <p class="yao">Piinga SARL</p>
+            </div>
+        </section></div></div>
+        <h1 class="container centre">Nos Citations</h1>
+        <div class="clearfix container-fluid">
+            <img src="Images/Capture d’écran 2023-04-12 060036.png" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+          
+            <p>
+                <h3>MOUSSA KONE</h1>
+              <blockquote>
+                "J’ai appris à avaler le crapaud : toujours commencer ma journée par la tâche la plus ardue, sans jamais me laisser arrêter. C’est ainsi que Groupe Logiciels et Services a pu réussir son développement."
+            </blockquote>
+            </p>
+          
+            <p>
+                <h3>MAMADOU MARIKO</h1>
+              <blockquote>
+                "Les meilleures choses qui arrivent dans le monde de l'entreprise ne sont pas le résultat d'un seul homme. C'est le travail de toute une équipe."
+              </blockquote>
+            </p>
+          </div>
+        <div class="container-fluid">
+        <footer id="pied">
             <section id="footer">
             <div class="">
                 <h1>WELCOME<br>TO DJAGO</h1>
@@ -99,6 +124,6 @@
             </section>
             <hr>
             <p id="feet">Mention légales CGU Politiques de Confidentialité</p>
-        </footer>
+        </footer></div>
     </body>
 </html>
