--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
       <section>
     <header>
         <section>
-            <div id="A1">
-            <img id="A2" src="Images/th.jpg" alt="image" width="150" height="100">
-            <p id="AA">Email:info@groupels.com<br><br>Téléphone:+226 25 37 11 28
+            <div id="A1" class="container-fluid">
+            <img id="A2" class="container-fluid" src="Images/th.jpg" alt="image" width="150" height="100">
+            <p id="AA" class="container-fluid">Email:info@groupels.com<br><br>Téléphone:+226 25 37 11 28
             </p>
             </div>
             <div class="container-fluid">
             <nav>
-                <ul id="A3" class="container-fluid">
-                    <li class="A4 container-fluid"><a href="Acueil.html">Accueil</a></li>
-                    <li class="A4 container-fluid">A propos</li>
+                <ul id="A3">
+                    <li class="A4 container-fluid">Accueil</li>
+                    <li class="A4 container-fluid"><a href="a_propos.html">A propos</a></li>
                     <li class="A4 container-fluid"><a href="Nos_Service.html">Nos services</a></li>
-                    <li class="A4 container-fluid">Portfolio</li>
+                    <li class="A4 container-fluid"><a href="portfolio.html">Portfolio</a></li>
                     <li class="A4 container-fluid"><a href="#pied">Contact</a></li>
                 </ul>
             </nav></div>
         </section>
     </header>
   </section>
-    <h1 class="fee container">Notre Expertise</h1>
+  <section>
+    <h1 class="container">Nous connaitre</h1>
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -52,7 +53,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </div></section>
+      <h1 class="container">Description de l'Entreprise...</h1>
       <section class="section1">
         <div id="moi">
             <h1>Qui sommes-nous?</h1>
@@ -78,12 +80,27 @@
                         la pointe de la tecchnologie.
                     </p>
                 </div>
-            </div>
-        </section>
-        <section>
+            </div></section>
+          <h1 class="container fee">Notre Expertise</h1>
+          <div class="grid text-center idem">
+            <div class="g-col-6 g-col-md-4 idem">La Finance et Les Flux Financiers</div>
+            <div class="g-col-6 g-col-md-4 idem">La Négoce 
+              Achat-Vente-Gestion des Stocks –Facturation-Production
+              </div>
+            <div class="g-col-6 g-col-md-4 idem">L’ Administration de la Paie de la Gestion des RH</div>
+          </div>
+          <div class="grid text-center">
+            <div class="g-col-6 g-col-md-4 idem">La Gestion Electronique des Documents (GED)</div>
+            <div class="g-col-6 g-col-md-4 idem">Gestion de la Qualité 
+              Qualipro</div>
+            <div class="g-col-6 g-col-md-4 idem">Autres Solutions Métiers
+              GMAO – HRMAP
+              </div>
+          </div>
+        <section id="nos">
                 <h1 class="fee">Nos partenaires</h1>
-                <img src="Images/partenaire.png" alt="image" width="1330" height="500">
-        </section>
+                <img src="Images/capturee.png" alt="image" width="1500" height="500">
+        </section><hr>
         <section id="sec">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
