--- a/Pages/Nos_Service.html
+++ b/Pages/Nos_Service.html
@@ -22,7 +22,7 @@
                     <ul id="A3">
                         <li class="A4 container-fluid"><a href="index.html">Accueil</a></li>
                         <li class="A4 container-fluid"><a href="a_propos.html"> A propos</a></li>
-                        <li class="A4 container-fluid"><a href="Nos_Service.html">Nos services</a></li>
+                        <li class="A4 container-fluid">Nos services</li>
                         <li class="A4 container-fluid"><a href="portfolio.html">Portfolio</li></a>
                         <li class="A4 container-fluid"><a href="#pied">Contact</a></li>
                     </ul>
